--- a/Spam_Email_Classification_using_BERT.ipynb
+++ b/Spam_Email_Classification_using_BERT.ipynb
@@ -12,7 +12,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Hugo Hiraoka > hhiraokawatts@gmail.com"
+        "Hugo Hiraoka - hhiraoka.w@gmail.com"
       ],
       "metadata": {
         "id": "5xmJl8br3uuB"
